maze.lessons.maze.pledge.PledgeMaze.scala.error
Escaper:8: error: ambiguous reference to overloaded definition,
both method + in class Int of type (x: Char)Int
and  method + in class Int of type (x: Short)Int
match expected type ?
	sommeAngle + =
                   ^